[package]
name = "hypocaust-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
sbi-rt = "0.0.2"
spin = "0.9.4"
riscv-decode = { git = "https://github.com/KuangjuX/riscv-decode.git" }
fdt = { version = "0.1.5" }
arrayvec = { version = "0.7.2", default-features = false }
memoffset = { version = ">=0.6.5", features = ["unstable_const"] }


[features]
embed_guest_kernel = []